docs/examples/kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: kmdah-service
  namespace: kmdah
spec:
  ports:
    - port: 8080
      name: http
      targetPort: http
  selector:
    app: kmdah
