docs/examples/kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kmdah-ingress
  namespace: kmdah
  annotations:
    kubernetes.io/ingress.class: haproxy
spec:
  rules:
    - host: "*.<client specific>.mangadex.network"
      http:
        paths:
          - backend:
              service:
                name: kmdah-service
                port:
                  name: http
  tls:
    - hosts:
        - "*.<client specific>.mangadex.network"
      secretName: mangadex-at-home-tls-secret
